# cpr-bot

./: .dockerignore  .env.example  .env_example  .gitignore  Dockerfile  README.md  build-app.sh  config.example.yml  config.yml  docker-compose.yml  pyproject.toml
.circleci/: config.yml
.github/workflows/: docker-publish.yml
modules/: __init__.py  bot.py  config.py  database.py
modules/cogs/commands/: admin.py  assignment.py  chat_gpt.py  course.py  help.py  manage_course.py  peer_review.py  settings.py  submission.py  team.py
modules/cogs/tasks/: cooldown.py
modules/utils/: database.py  embeds.py  helpers.py  pagination.py
scripts/: build-app.sh  mongo-init.sh
